wrong files hehe

--- a/index.html
+++ b/index.html
@@ -3,35 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="game.js" defer></script>
-    <title>Rock Paper Scissors</title>
+    <title>Rock Paper Scissors game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="header">
-        <h1>Rock Paper Scissors game</h1>
-        <div class="playerscore">Playerscore:
-            <span class="pscore">0</span>
+    <div class="container">
+        <div class="header">
+            <h1>Rock Paper Sciossors</h1>
+            <div class="scoreboard">
+                <div class="playerscore"><h2>Player score:0</h2></div>
+                <div class="computerscore"><h2>Computer score:0</h2></div>
+            </div>
+            <div><h3>Round winner:</h3></div>
         </div>
-        <divc class="computerscore">Computerscore:
-            <span class="cscore">0</span>
+        <div class="buttons"> 
+            <div class="rock-button">
+                <button><img src="./imgs/rock.png" alt=""></button>
+            </div>
+            <div class="paper-button">
+                <button> <img src="./imgs/paper.png" alt=""></button>
+            </div>
+            <div class="scissors-button">
+                <button><img src="./imgs/scissors.png" alt=""></button>
+            </div>
         </div>
-        <div class="text">
-            <span class="result"></span>
-        </div>
-    </div>
-    <div id="container">
-        <div class="Rock">
-            <button class="BtnRock">Rock</button>
-        </div>
-        <div class="Paper">
-            <button class="BtnPaper">Paper</button>
-        </div>
-        <div class="Scissors">
-            <button class="BtnScissors">Scissors</button>
-        </div>
-    </div>
-
     </div>
     
 </body>
